# adaptive_pipeline

./: .gitattributes  .gitignore  .release-plz.toml  .rustfmt.toml  ARCHITECTURE_REVIEW.md  BOOTSTRAP_CODE_REVIEW.md  CHANGELOG.md  CHANGELOG_v2.0.0.md  CONCURRENCY_FINAL_PLAN.md  CONCURRENCY_IMPLEMENTATION_PLAN.md  Cargo.toml  Claude_Rust.md  Cross.toml  EXISTING_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_STATUS.md  STREAMING_IO_FIX.md  WEEK2_DESIGN.md  claude_rust_uncovered_sections.md  observability.toml  pipeline.db  pipeline.db-shm  pipeline.db-wal  pipeline_optimization_report.md
adaptive_pipeline/: Cargo.toml  README.md  claude_rust.md  demo_envvar.sh  pipeline.db  pipeline_optimization_report.md
adaptive_pipeline/benches/: file_io_benchmark.rs.disabled
adaptive_pipeline/docs/: book.toml
adaptive_pipeline/docs/book/: 404.html  index.html  introduction.html  print.html  toc.html
adaptive_pipeline/docs/diagrams/: chunk-processing.puml  hexagonal-architecture.puml  pipeline-flow.puml
adaptive_pipeline/docs/src/: SUMMARY.md  introduction.md
adaptive_pipeline/examples/: README.md  id_generator_demo.rs  run_examples.sh
adaptive_pipeline/examples/developer_guides/: file_io_demo.rs  generic_compression_demo.rs  generic_metrics_collector_demo.rs  generic_result_builder_demo.rs  generic_service_demo.rs  sqlite_repository_demo.rs
adaptive_pipeline/examples/integration_examples/: complete_file_processing_integration.rs  generic_service_integration_demo.rs
adaptive_pipeline/examples/sample_data/: README.md
adaptive_pipeline/examples/user_walkthroughs/: document_encryption_demo.sh
adaptive_pipeline/migrations/: 20250101000000_initial_schema.sql
adaptive_pipeline/scripts/: generate_ulids.rs  init_test_db.sh  schema.sql
adaptive_pipeline/scripts/test_data/: README.md  create_clean_test_database.sql  create_empty_database.sql  create_fresh_structured_database.sql  create_structured_database.sql  pipeline.db  test_pipeline.db
adaptive_pipeline/src/: application.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs
adaptive_pipeline/src/application/: commands.rs  services.rs  use_cases.rs  utilities.rs
adaptive_pipeline/src/infrastructure/: adapters.rs  config.rs  logging.rs  metrics.rs  repositories.rs  runtime.rs  services.rs
adaptive_pipeline/src/presentation/: adapters.rs
adaptive_pipeline/tests/: architecture_compliance_test.rs  common.rs  e2e.rs  integration.rs
adaptive_pipeline/tests/e2e/: e2e_binary_format_test.rs  e2e_restore_pipeline_test.rs  e2e_use_cases_test.rs
adaptive_pipeline/tests/integration/: application_integration_test.rs  application_layer_integration_test.rs  application_services_integration_test.rs  domain_services_test.rs  minimal_application_test.rs  pipeline_name_validation_tests.rs  schema_integration_test.rs
adaptive_pipeline/tools/: create_test_database.rs
adaptive_pipeline_bootstrap/: Cargo.toml  README.md
adaptive_pipeline_bootstrap/src/: cli.rs  config.rs  exit_code.rs  lib.rs  logger.rs  platform.rs  shutdown.rs  signals.rs
adaptive_pipeline_bootstrap/src/cli/: parser.rs  validator.rs
adaptive_pipeline_bootstrap/src/platform/: unix.rs  windows.rs
adaptive_pipeline_domain/: Cargo.toml  README.md
adaptive_pipeline_domain/src/: aggregates.rs  entities.rs  error.rs  events.rs  lib.rs  repositories.rs  services.rs  value_objects.rs
adaptive_pipeline_domain/src/aggregates/: pipeline_aggregate.rs
adaptive_pipeline_domain/src/entities/: pipeline.rs  pipeline_stage.rs  processing_context.rs  processing_metrics.rs  security_context.rs
adaptive_pipeline_domain/src/error/: pipeline_error.rs
adaptive_pipeline_domain/src/events/: generic_event.rs  pipeline_events.rs
adaptive_pipeline_domain/src/repositories/: pipeline_repository.rs  stage_executor.rs
adaptive_pipeline_domain/src/services/: checksum_service.rs  compression_service.rs  datetime_compliance_service.rs  datetime_serde.rs  encryption_service.rs  file_io_service.rs  file_processor_service.rs  pipeline_service.rs  stage_service.rs
adaptive_pipeline_domain/src/value_objects/: algorithm.rs  binary_file_format.rs  chunk_metadata.rs  chunk_size.rs  encryption_benchmark.rs  encryption_key_id.rs  file_chunk.rs  file_chunk_id.rs  file_path.rs  file_permissions.rs  generic_id.rs  generic_size.rs  pipeline_id.rs  pipeline_requirements.rs  processing_context_id.rs  processing_step_descriptor.rs  security_context_id.rs  session_id.rs  stage_id.rs  stage_order.rs  stage_parameters.rs  user_id.rs  worker_count.rs
bootstrap/: Cargo.toml
bootstrap/src/: cli.rs  config.rs  exit_code.rs  lib.rs  logger.rs  platform.rs  shutdown.rs  signals.rs
bootstrap/src/cli/: mod.rs  parser.rs  validator.rs
bootstrap/src/platform/: mod.rs  unix.rs  windows.rs
pipeline/: Cargo.toml  pipeline.db  pipeline_optimization_report.md
pipeline-domain/: .gitattributes  Cargo.toml
pipeline-domain/src/: error.rs  lib.rs  mod.rs
pipeline-domain/src/aggregates/: mod.rs  pipeline_aggregate.rs
pipeline-domain/src/entities/: mod.rs  pipeline.rs  pipeline_stage.rs  processing_context.rs  processing_metrics.rs  security_context.rs  transactional_chunk_writer.rs
pipeline-domain/src/error/: mod.rs  pipeline_error.rs
pipeline-domain/src/events/: generic_event.rs  (+2 more)
pipeline/benches/: file_io_benchmark.rs
pipeline/docs/: GO_PORT_STRATEGY.md  QUICK_START.md  SESSION_HANDOFF.md  USER_GUIDE.md  book.toml
pipeline/examples/: README.md  id_generator_demo.rs
pipeline/scripts/: generate_ulids.rs
pipeline/src/: infrastructure.rs  lib.rs  main.rs  mod.rs  presentation.rs
pipeline/tests/: application_integration_test.rs  application_layer_integration_test.rs  application_services_integration_test.rs  architecture_compliance_test.rs  domain_services_test.rs  e2e.rs  e2e_binary_format_test.rs  e2e_restore_pipeline_test.rs  minimal_application_test.rs  pipeline_name_validation_tests.rs  repository_integration_test.rs.disabled  schema_integration_test.rs  stage_type_tests.rs
pipeline/tools/: create_test_database.rs
(+466 files in other folders)
