[package]
name = "adaptive-pipeline"
version = "1.0.1"
description = "High-performance optimized, adaptive file processing pipeline with configurable stages, binary format support, and cross-platform compatibility"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/abitofhelp/adaptive_pipeline.git"
readme = "README.md"

[lints]
workspace = true

[dependencies]
adaptive-pipeline-domain = { path = "../adaptive_pipeline_domain", version = "1.0.1" }
adaptive-pipeline-bootstrap = { path = "../adaptive_pipeline_bootstrap", version = "1.0.1" }

# Core dependencies
serde = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Monitoring
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
prometheus = "0.14.0"

# Utilities
hex = "0.4"
base64 = "0.22"
ring = "0.17"
regex = "1.11"
once_cell = "1.21"
sha2 = "0.10"
byte-unit = "5.1"
crc32fast = "1.5"

# Compression
brotli = "8.0"
flate2 = "1.1"
zstd = "0.13"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
scrypt = "0.11"
zeroize = "1.8"

# Parallel processing
rayon = "1.11"
crossbeam = { workspace = true }

# Database
sqlx = { workspace = true }

# Memory mapping and async I/O
memmap2 = { workspace = true }
parking_lot = { workspace = true }
async-stream = "0.3"
tempfile = "3.23"

# Tools
[[bin]]
name = "create-test-database"
path = "tools/create_test_database.rs"

# Benchmarks
[[bench]]
name = "file_io_benchmark"
harness = false

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
scopeguard = "1.2"
