[package]
name = "adaptive-pipeline-bootstrap"
version = "1.0.1"
edition = "2021"
authors = ["Michael Gardner <michael@abitofhelp.com>"]
description = "Bootstrap module for optimized, adaptive pipeline crate - handles entry point, DI, signals, and platform abstraction"
license = "BSD-3-Clause"
repository = "https://github.com/abitofhelp/adaptive_pipeline.git"
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Async trait support
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Logging
tracing = { workspace = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "sysinfoapi",
    "memoryapi",
    "winbase",
    "shellapi",
] }

[dev-dependencies]
# Testing
tokio-test = "0.4"

[lib]
name = "bootstrap"
path = "src/lib.rs"
