[package]
name = "pipeline"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"

[lints]
workspace = true

[dependencies]
pipeline-domain = { path = "../pipeline-domain" }
bootstrap = { path = "../bootstrap" }

# Core dependencies
serde = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Monitoring
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
prometheus = "0.13.3"

# Utilities
hex = "0.4"
base64 = "0.21"
ring = "0.17"
regex = "1.0"
once_cell = "1.19"
sha2 = "0.10"
byte-unit = "5.1"
crc32fast = "1.3"

# Compression
brotli = "6.0"
flate2 = "1.0"
zstd = "0.13"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
scrypt = "0.11"
zeroize = "1.8"

# Parallel processing
rayon = "1.10"
crossbeam = { workspace = true }

# Database
sqlx = { workspace = true }

# Memory mapping and async I/O
memmap2 = { workspace = true }
parking_lot = { workspace = true }
async-stream = "0.3"
tempfile = "3.0"

# Tools
[[bin]]
name = "create-test-database"
path = "tools/create_test_database.rs"

# Benchmarks
[[bench]]
name = "file_io_benchmark"
harness = false

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
scopeguard = "1.2"
